--- a/GI-services/DisplayServer/DisplayServer/WebContent/Leaflet/Map.html
+++ b/GI-services/DisplayServer/DisplayServer/WebContent/Leaflet/Map.html
@@ -57,27 +57,15 @@
                                                         <h1 class="dash__h1 u-s-m-b-14">Enter latitude and longitude</h1>
 
                                                         <button class="btn btn--e-brand-b-2" id="additems" type="submit">Add more</button>
-
+                                                        <button class="btn btn--e-brand-b-2" id="deleteitems" type="submit">Delete</button>
+                                                        <button class="btn btn--e-brand-b-2" id="refreshitems" type="submit">Refresh</button>
                                                     </div>
 
                                                     <span class="dash__text u-s-m-b-30">Search information</span>
                                                     <form class="dash-address-manipulation" method="GET" action="#">
-                                                        <div class="gl-inline">
-                                                            <div class="u-s-m-b-30">
 
-                                                                <label class="gl-label" for="address-fname">Latitude *</label>
+                                                        <button class="btn btn--e-brand-b-2" type="submit">INSERT</button>
 
-                                                                <input name="paramName" class="input-text input-text--primary-style" type="text" id="address-fname" placeholder="Section Name"></div>
-                                                            
-                                                                <div class="u-s-m-b-30">
-
-                                                                    <label class="gl-label" for="address-fname">Longitude *</label>
-    
-                                                                    <input name="paramName" class="input-text input-text--primary-style" type="text" id="address-fname" placeholder="Section Name"></div>
-
-                                                        </div>
-
-                                                        <button class="btn btn--e-brand-b-2" type="submit">SEARCH</button>
                                                     </form>
                                                 </div>
                                             </div>
@@ -99,6 +87,5 @@
 
     </body>
 
-    <script src="../js/Map.js"></script>
-
+    <script  src="../js/Map/Map.js"></script>
 </html>
